# gitlab-code-search-py

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  docker-entrypoint.sh  gcs_main.py  pyproject.toml
.github/workflows/: release.yml
docs/: gitlab-token.md
gitlab_code_search/: __main__.py  cli.py  credential_store.py  excel_writer.py  gitlab_api.py  models.py  search_service.py  serve.py  serve_store.py  web_ui.py
scripts/: build_macos.sh
tests/: test_cli.py  test_excel_writer.py  test_serve.py
